bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-format.stderr
error: expected identifier
 --> tests/ui/error-unsupported-struct-attr-format.rs:4:13
  |
4 | #[frompyo3( = "Resource")]
  |             ^
